# graphql_django

./: .gitignore  pyproject.toml
api/: admin.py  models.py  schema.py
api/migrations/: 0001_initial.py
graphql_django/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
users/: schema.py
