[tool.poetry]
name = "graphql_django"
version = "0.1.0"
description = ""
authors = ["wtkn25 <atrastar72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.2"
Django = "^3.1.6"
django-cors-headers = "^3.7.0"
graphene-django = "^2.15.0"
django-filter = "^2.4.0"
django-graphql-jwt = "^0.3.1"
PyJWT = "1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
